
message Reading {
  required uint32 timestamp = 1;
  required double value = 2;
  optional uint32 seqno = 3;
  optional double min = 4;
  optional double max = 5;
}

message ReadingSet {
  required uint32 streamid = 1;
  required uint32 substream = 2;
  repeated Reading data = 3;
}

message DatabaseDelta {
  optional int32 timestamp = 1;
  optional int64 value = 2;
  optional int32 seqno = 3;
  optional int64 min_delta = 4;
  optional int64 max_delta = 5;
  optional double min = 6;
  optional double max = 7;
}

message DatabaseRecord {
  required uint32 period_length = 1;
  optional Reading first = 2;
  repeated DatabaseDelta deltas = 3;
}

message Query {
  required uint32 streamid = 1;
  required uint32 substream = 2;
  required uint32 starttime = 3;
  required uint32 endtime = 4;
  optional uint32 action = 5;
  optional Sketch sketch = 6;
}

message Nearest {
  required uint32 streamid = 1;
  required uint32 substream = 2;
  required uint32 reference = 3;
  enum Direction {
    NEXT = 1;
    PREV = 2;
  } 
  required Direction direction = 4;
  optional uint32 n = 5;             
  optional Sketch sketch = 6;
}

message Delete {
  required uint32 streamid = 1;
  required uint32 substream = 2;
  required uint64 starttime = 3;
  required uint64 endtime = 4;
}
 
message Response {
  enum ErrorCode {
    OK = 1;
    FAIL = 2;
    FAIL_PARAM = 3;
    FAIL_MEM = 4;
    FAIL_COMMAND = 5;
  }
  required ErrorCode error = 1;
  optional ReadingSet data = 2;
}

enum MessageType {
  QUERY = 1;
  READINGSET = 2;
  RESPONSE = 3;
  NEAREST = 4;
  DELETE = 5;
}

service ReadingDB {
  rpc Ask (Query) returns (Response);
  rpc Tell (ReadingSet) returns (Response);
  rpc Iter (Nearest) returns (Response);
}

message Sketch {
  enum SketchType {
    NULL = 0;
    COUNT = 1;
    MEAN = 2;
    MIN = 3;
    MAX = 4;
    FIRST = 5;
    MEDIAN = 6;
  };
  required SketchType type = 1;
  required int32 window = 2;
}
